# sprintf

./: .dependabotbot.json  .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  SECURITY.MD  docker-compose.yml  justfile  pyproject.toml  test_links.py  test_q.py  test_sprintf.py
.github/workflows/: build_container.yml  mypy.yml  pylint.yml  pytest.yml
images/: Template - Icon - App.pxm  appicon-256x256.pxm  appicon-512x512.pxm  apple-touch-icon-base.pxm  apple-touch-icon-ipad-76x76.pxm  apple-touch-icon-ipad-retina-152x152.pxm  apple-touch-icon-iphone-60x60.pxm  apple-touch-icon-iphone-retina-120x120.pxm
sprintf/: __init__.py  __main__.py  healthcheck.py  index.html
sprintf/images/: favicon.pxm
sprintf/js/: sprintf.js
tests/: test_click.py  test_links.py  test_q.py  test_sprintf.py
