[tool.poetry]
name = "sprintf"
version = "0.0.2"
description = "SPA for sprintf python things"
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
pydantic = "^2.0.3"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"
mypy = "^1.0"
pytest = "^8.0.0"
black = "^25.1"
pylint-pydantic = "^0.3.0"
requests = "^2.28.1"
requests-html = "^0.10.0"
pytest-asyncio = "^0.26.0"
types-requests = "^2.28.11"
httpx = "^0.28.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "sprintf"
description = "SPA for sprintf python things"
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
[tool.pylint.DEFAULT]
extension-pkg-whitelist="pydantic"
load-plugins="pylint_pydantic"

