[project]
name = "sprintf"
description = "SPA for sprintf python things"
license = "MIT"
version = "0.0.3"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "click>=8.1.3",
    "requests>=2.32.4",
]

[project.scripts]
sprintf = "sprintf:cli"
sprintf-healthcheck = "sprintf.healthcheck:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sprintf", "images"]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[dependency-groups]
dev = [
    "mypy>=1.0,<2.0",
    "pytest>=8.0.0,<10.0.0",
    "requests-html>=0.10.0",
    "pytest-asyncio>=0.26.0",
    "types-requests>=2.28.11",
    "ruff>=0.11.13",
    "lxml-html-clean>=0.4.2",
    "isort>=6.0.1",
    "httpx>=0.28.1",
]
